--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ gems:
   - jekyll-paginate
 
 # Permalinks
-permalink:           pretty
+permalink:           /:categories/:year/:month/:day/:title.html
 
 # Setup
-url:                 http://qwtel.com
+url:                 https://nooptr.github.io
 
 # Set to '' in case of hosting on GitHub pages,
 # i.e. `http://<username>.github.io`
@@ -21,15 +21,14 @@ paginate_path:       '/page-:num/'
 
 # Markdown enabled, however don't use more than one paragraph (enforced by `>`)
 description:         >
-  A pretentious two-column [Jekyll](http://jekyllrb.com/) theme, stolen by [`@qwtel`{:style="background: rgba(255, 255, 255, 0.15)"}](https://twitter.com/qwtel)
-  from [Hyde](http://hyde.getpoole.com).
-  You could say it was.. [hydejacked](http://media3.giphy.com/media/makedRIckZBW8/giphy.gif).
+  Blog chia sẻ những kinh nghiệm và kiến thức về lập trình, những hiểu biết để xây dựng một hệ thống
+  hoàn hảo!
 
 # The tags listed as entries in the sidebar
 sidebar_tags:        [jekyll, hyde]
 
 # Fallback image and color if not overwritten for tag or post
-image:               /hydejack/public/img/nap.jpg
+# image:               /hydejack/public/img/nap.jpg
 color:               '#A85641'
 
 # Fonts
@@ -42,25 +41,22 @@ author:
   name:              'Nooptr'
 
   # This photo will be used in the about section
-  photo:             http://qwtel.com/public/img/flo.jpg
-  photo2x:           http://qwtel.com/public/img/flo@2x.jpg
+  photo:             https://avatars1.githubusercontent.com/u/5398914?v=3&u=798209fe62636c6d04c98c2f426bf45af9ced1f6&s=200
+  photo2x:           https://avatars1.githubusercontent.com/u/5398914?v=3&u=798209fe62636c6d04c98c2f426bf45af9ced1f6&s=400
 
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I'm Florian or [`@qwtel`](https://www.twitter.com/qwtel), which isn't an acronym,
-    I just [wanted a short username](http://qwtel.com/how-to-find-a-short-username) and that one happened to be available.
-
-    Read my thoughts on [#software](http://qwtel.com/tag/software) and [#cryptoeconomics](http://qwtel.com/tag/cryptoeconomics).
+    Bridge System Engineer, Web Developer, System Infrastructure at Japan company
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    facebook:        _username_
-    twitter:         _username_
-    google:          _number_
-    vk:              _username_
-    youtube:         _string___string___string_
+    # facebook:        _username_
+    twitter:           nooptr
+    # google:          _number_
+    # vk:              _username_
+    # youtube:         _string___string___string_
     # vimeo:           _username_
     # vine:            _username_
     # spotify:         user/_number_
@@ -80,7 +76,7 @@ author:
     # pinterest:       _username_
     # foursquare:      _number_
     # yelp:            _string_
-    # github:          _username_
+    github:            nooptr
     # stackoverflow:   _number_/_username_
     # npm:             _username_
     # hackernews:      _username_
@@ -93,7 +89,7 @@ author:
     # paypal:          _username_
 
 # Remove to disable Google Anaylics
-google_analytics_id: 'UA-84025722-2'
+# google_analytics_id: 'UA-84025722-2'
 
 # Setting a disqus subdomain will enable the comment section
 # disqus:            <username>
