--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude: ["README.md"] # files to exclude
 highlighter: rogue
 markdown: kramdown
 disqus: disqus_iuJa449IW4
-google_analytics: Tech Blog
+google_analytics: UA-91740366-1
 title: Tech Blog
 
 defaults:
